Resolved issue in app´s building proccess

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         resConfigs "auto" //Something related to strings , recommended by Firebase Auth
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -27,12 +28,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //Firebase Auth
-    //Firebase Auth Facebook
-    //BottomNavigation
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.firebaseui:firebase-ui-auth:2.2.0'
+    compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.facebook.android:facebook-android-sdk:4.22.1'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.android.support:support-v4:25.3.1'
@@ -40,5 +39,3 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
-
-//Connect app to firebase
