--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.firebaseui:firebase-ui-auth:2.2.0'
+    compile 'com.firebaseui:firebase-ui-database:2.2.0'
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.facebook.android:facebook-android-sdk:4.22.1'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
     testCompile 'junit:junit:4.12'
 }
 
